--- a/main.html
+++ b/main.html
@@ -5,10 +5,71 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Table</title>
     <link rel="stylesheet" href="style.css" />
+	  
   </head>
   <body>
-    <table style="width: 100%; height: 100%">
       <!-- Your code here -->
-    </table>
+		<table width="500">
+			<tr>
+				<td width ="250">
+				<table width="100%" class="margin">
+					<tr >
+						<th colspan ="2">Nested Table 2</th>
+					</tr>
+					<tr>
+						<th>Column 1</th>
+						<th>Column 2</th>
+					</tr>
+					<tr>
+						<td>abc</td>
+						<td>def</td>
+					</tr>
+				</table>	
+				</td>
+				<td>
+					<table width ="100%" class="margin">
+						<tr>
+							<th>Nested Table 1</th>
+						</tr>
+			            <tr>
+							<td>
+							<ul>
+								<li>List item</li>
+								<li>List item</li>
+								<li>List item</li>
+							</ul>
+								</td>
+						</tr>
+					</table>
+				</td>
+			</tr>
+			<tr>
+				<td>
+					<table width ="100%" class="margin">
+						<tr>
+							<th colspan ="2">Nested Table 3</th>
+						</tr>
+						<tr>
+							<td>
+								<a href="">Nested Table</a>
+							</td>
+							<td>Demo Continued</td>
+						</tr>
+					</table>
+				</td>
+				<td>
+					<table width ="100%" class="margin">
+						<tr>
+							<th>Nested Table 4</th>
+						</tr>
+						<tr>
+							<td style="background:rgb(0,0,0);color:rgb(255,255,255); text-align:center;">
+								HTML
+							</td>
+						</tr>
+					</table>
+				</td>
+			</tr>
+		</table>
   </body>
 </html>
